Fixed intro images covering nav cover on mobile

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -3,7 +3,6 @@ $color-neutral-white: hsl(0, 0%, 100%);
 
 nav {
     position: fixed;
-    z-index: 2;
     top: 88px;
     left: 50%;
     width: 87%;
